PLANET-5029 Fix inline images alignment

--- a/assets/src/styles/blocks/core-overrides/BlockSpacing.scss
+++ b/assets/src/styles/blocks/core-overrides/BlockSpacing.scss
@@ -1,4 +1,4 @@
-.wp-block-image,
+.wp-block-image figure:not(.alignleft):not(.alignright),
 .wp-block-quote,
 .wp-block-file,
 .wp-block-table,
